static/shared.css
@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');

.centered {
    text-align: center;
}

body {
    background-color: #0F0616;
    color: #FFFFFF;
    
    font-family: "Source Code Pro", monospace;
    font-optical-sizing: auto;
    font-size: 2rem;
    font-style: normal;

    padding-top: 2vh;
    padding-left: 2vw;
    padding-right: 2vw;
    padding-bottom: 2vh;
}

a {
    color: #FF69B4;

    font-weight: bold;

    text-decoration: none;
}

.constant {
    color: #00FFFF;

    font-style: italic;
    font-weight: bold;
}

